# adwe

./: .env.example  ADWE_ANALYSIS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: adwe-migration-validation.md  architecture.md
docs/diagrams/: adwe-architecture.mmd
migrations/: env.py
migrations/versions/: 1a32f5cedd2f_add_workflow_timestamps.py  1f818d64a372_add_patch_preview_metadata.py  32e5eafea712_add_patch_push_requested_flag.py  364717354b5d_create_patches_table.py  690e2cbea360_add_code_modification_to_workflows.py  6ccfff64fa2e_create_workflows_table.py  8029ad3f659b_add_implementation_plan_to_workflows.py  8dd7ceca045a_create_pull_requests_table.py  9f9e0710fb75_create_audit_events_table.py  b380c027fe4a_add_workflow_retry_tracking.py  b4741e3f30d9_add_patch_priority_metadata.py  b9e70b9b5ab8_add_patch_pr_request_fields.py  cd6280ac3c94_add_repository_analysis_to_workflows.py  e6578c1b84e0_add_queue_job_id.py  ea3d8f2d20c9_add_workflow_pull_request_link.py  ed806784e8ab_add_patch_application_result_fields.py
tests/unit/: test_agent_audit_events.py  test_code_modifier.py  test_code_modifier_priority_scoring.py  test_code_modifier_target_selection.py  test_constants.py  test_git_branch.py  test_git_commit.py  test_git_push.py  test_github_branch.py  test_github_pr.py  test_health.py  test_llm_config.py  test_llm_planner.py  test_llm_service.py  test_openapi_routes.py  test_patch_apply.py  test_patch_apply_push_query.py  test_patch_apply_push_schema.py  test_patch_apply_queue_route.py  (+42 more)
(+64 files in other folders)
